--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "ffmpeg-static-electron": "^2.0.3",
+    "ffprobe-static-electron": "^2.0.2",
     "install": "^0.13.0",
     "npm": "^8.3.2",
     "vue": "^2.6.11",
