--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "npm": "^8.3.2",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vue-slider-component": "^3.2.15",
     "vue2-perfect-scrollbar": "^1.5.2",
     "vuetify": "^2.4.0"
   },
