--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "vue-router": "^3.2.0",
     "vue-slider-component": "^3.2.15",
     "vue2-perfect-scrollbar": "^1.5.2",
-    "vuetify": "^2.4.0"
+    "vuetify": "^2.4.0",
+    "postcss": "^8.2.13",
+    "ansi-regex": "^5.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -42,6 +44,9 @@
     "vue-cli-plugin-electron-builder": "~2.1.1",
     "vue-cli-plugin-vuetify": "~2.4.5",
     "vue-template-compiler": "^2.6.11",
-    "vuetify-loader": "^1.7.0"
+    "vuetify-loader": "^1.7.0",
+    "node-forge": "^1.0.0",
+    "nth-check": "^2.0.1",
+    "glob-parent": "^5.1.2"
   }
 }
