--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "nxenc",
-  "description": "A few tools to help you process videos quickly.",
+  "description": "An Electron app for quick batch processing of videos.",
   "author": "toda <t.toda31@gmail> (https://github.com/tknktd/)",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
